--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -119,6 +119,9 @@ cs:
   paginated items shown: "%{first_shown}&ndash;%{last_shown} z %{total_available}"
   160 character limit: "160 znaků nebo méně"
   recent versions: "Naposledy používané"
+  or:
+    lower: "nebo"
+    upper: "NEBO"
   likes:
     my likes: "Moje oblíbené"
     all likes: "Všechny oblíbené"
@@ -132,6 +135,7 @@ cs:
     no community notes: "Nenašly se žádné poznámky odkazující na vybrané verše. Abyste mohl/a vytvořit poznámku, tak vyberte verš v Bibli a pak zmáčkněte tlačítko \"Vybrané\", které je nahoře nad textem."
     public: "Veřejné"
     private: "Soukromé"
+    is private: "Požadovaná poznámka je soukromá."
     draft: "Koncept/y"
     creation form errors: "Následující chyba zabránila vytvoření vaší poznámky:"
     reference field: "Odkaz(y):"
@@ -501,12 +505,18 @@ cs:
     must start to complete: "Aby jste mohl/a uložit přečtený úsek, je zapotřebí spustit tento plán čtení!"
     invalid reference: "Promiňte, ale v tomto vybraném překladu se zřejmě nenachází odkaz na tento verš. Vyzkoušejte vybrat jiný překlad, viz nahoře. Pokud se vám tato zpráva opět zobrazí , prosím informujte náš <a href='%{support_url}'>tým podpory</a> o tomto problému."
   registration:
+    placeholder:
+      email: "Zadejte vaši e-mailovou adresu"
+      username: "Zadejte vaše uživatelské jméno"
+      password: "Zadejte své heslo"
+    with email: "Zaregistrujte se pomocí vaší e-mailové adresy"
     with facebook: "Přihlásit se přes Facebook"
     benefits title: "Získejte plný zážitek"
     benefits blurb: "Vytvoření YouVersion účtu vám dává přístup k více funkcím, jako jsou záložky nebo poznámky. Budete je mít k dispozici na jakémkoli zařízení, kde se přihlásíte. Účet vám také ulehčí sdílení Bible s přáteli, tak obětujte jednu nebo dvě minuty a zaregistrujte se!"
     plan blurb: "Vypadá to, že chcete začít plán čtení. Chytré! Plány vám můžou pomoci udělat z Bible součást vašeho každodenního života. Přihlašte se nebo si vytvořte účet níže a můžete začít!"
     bookmark blurb: "Vypadá to, že chcete použít záložku. Skvěle! Záložky vám pomůžou uspořádat verše, které se chcete naučit zpaměti, sdílet nebo označit jako oblíbené. Přihlašte se nebo si vytvořte účet viz níže a můžete začít!"
     friends blurb: "Vypadá to, že se chcete spojit s přáteli. Dobrý nápad! Budete moci sdílet, co se právě učíte, a pomáhat ostatním udržet odhodlání v jejich plánech číst pravidelně Bibli. Přihlašte se nebo si vytvořte účet níže a můžete začít!"
+    share blurb: "Zdá se, že chcete sdílet písmo. Skvěle! Budete moci sdílet písmo přes Facebook nebo Twitter. Přihlašte se nebo si založte účet níže a můžete začít!"
     highlight blurb: "Zdá se, že chcete zvýraznit nějaké verše. Výborně! Zvýraznění vám pomáhají organizovat a udržovat přehled o vašich oblíbených verších. Přihlašte se, nebo si založte účet a můžete začít."
     note blurb: "Vypadá to, že chcete vytvořit poznámku o verši. Dobrý nápad! Poznámky vám pomůžou organizovat a zapamatovat pravdy, které objevíte v Božím Slově. Přihlašte se nebo se zaregistrujte a můžete začít!"
   audio:
@@ -591,12 +601,7 @@ cs:
       logos: "Složka s logy YouVersion"
       icons: "Ikony aplikace Bible"
       infographic: "Infografika: Statistiky a používání aplikace Bible"
-      iphone: "Sbírka obrázků: iPhone"
-      ipad: "Sbírka obrázků: iPad"
-      android: "Sbírka obrázků: Android"
-      blackberry: "Sbírka obrázků: BlackBerry"
-      win phone 7: "Sbírka obrázků: Windows Phone 7"
-      windows 8: "Sbírka obrázků: Windows 8"
+      devices: "Sbírka obrázků: Zařízení"
       lifestyle: "Sbírka obrázků: Lifestyle"
       screencast: "Ilustrační video o YouVersion"
     links title: "Média o YouVersion"
@@ -629,6 +634,28 @@ cs:
       title: "Ups!"
       explanation: "Něco se pokazilo! Můžete zkusit obnovit stránku, omlouváme se za toto nedopatření!"
       our action: "Byli jsme o tomto problému upozorněni a vrhneme se na něj co nejdřív, jak jen to bude možné."
+    home:
+      hero:
+        heading: "Bible zdarma na váš telefon, tablet a počítač."
+        description: "YouVersion je jednoduchá aplikace bez reklam, která vám přináší Boží Slovo do vašeho každodenního života."
+        learn more: "zjistěte víc níže"
+        start reading: "Začít číst"
+        skip in future: "Přeskakovat v budoucnu tuto stránku"
+        now skipped: "Tato stránka bude přeskočena."
+      features:
+        read heading: "Čtěte Bibli."
+        read description: "Vyberte si ze <strong>stovek jazyků a překladů Bible</strong>. Porovnávejte dva překlady vedle sebe. Můžete si také zvolit font a velikost písma. Uzpůsobte si váš online zážitek s Biblí tak, jak vám to vyhovuje."
+        study heading: "Studujte Bibli."
+        study description: "<strong>Zvýrazňujte</strong> vaší oblíbenou barvou, vytvářejte <strong>záložky</strong> k vašim oblíbeným biblickým veršům a pište si poznámky o tom, co se právě učíte. Netrávíte jen čas s Božím Slovem, vytváříte historii vaší interakce s Biblí."
+        subscribe heading: "Vyberte si plán čtení Bible."
+        subscribe description: "Přečtěte celou Bibli, zaměřte se na určité téma, nebo čtěte zamyšlení od obdarovaného učitele. Zvolte si plán a každý den najdete úsek z Bible čekající jen na vás."
+        download heading: "Vezměte si Bibli s sebou."
+        download description: "<a href='http://youversion.com/download'>Stáhněte si</a> aplikaci Bible zdarma na jakékoli mobilní zařízení. Během používání aplikace se všechny vaše poznámky, záložky, zvýraznění, plány a další budou automaticky synchronizovat na všech vašich zařízeních."
+      get started: "Začněte s bezplatným účtem."
+      word with you: "Boží Slovo je s vámi."
+      download action: "Stáhněte si aplikaci Bible"
+      download description: "Stáhněte si bezplatnou aplikaci Bible na vaše mobilní zařízení a budete mít vaši Bibli vždy s sebou, ať půjdete kamkoli."
+      world installs: "Instalací po celém světě"
   shared:
     menu_settings:
       title: "Nastavení zobrazení"
@@ -667,3 +694,5 @@ cs:
     number of languages field: "Celkem jazyků:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Veřejná doména"
+    loading: "Načítání více překladů..."
+    load error: "Omlouváme se, nepodařilo se načíst více překladů. Zavřete toto menu a otevřte jej znovu."
