--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -119,6 +119,8 @@ it:
   paginated items shown: "%{first_shown}&ndash;%{last_shown} di %{total_available}"
   160 character limit: "160 caratteri o meno"
   recent versions: "Usato Recentemente"
+  or:
+    lower: "oppure"
   likes:
     my likes: "I Miei Preferiti"
     all likes: "Tutti i Preferiti"
@@ -269,14 +271,14 @@ it:
       your information text: "Quando effettui la registrazione di un account YouVersion, o di un altro servizio o promozione LifeChurch.tv che richiede la registrazione, ti chiediamo i tuoi dati personali (ad esempio nome, indirizzo e-mail e password dell'account). Potremmo combinare i dati che invii tramite il tuo account con informazioni di altri servizi LifeChurch.tv o di terze parti per offrirti una migliore esperienza e migliorare la qualità dei nostri servizi. Alcuni servizi ti consentono di rifiutare la combinazione di tali informazioni."
       device id title: "Identificatore Univoco del Dispositivo e posizione GPS"
       device id text: "Quando accedi all'App Bibbia YouVersion, potremmo raccogliere il tuo Identificatore Univoco del Dispositivo ('UDID') e/o indirizzo IP e/o posizione GPS. Utilizziamo questi dati per offrirti un'esperienza personalizzata. Le informazioni vengono raccolte per determinare il numero complessivo di singoli dispositivi che utilizzano tutti o parte dei nostri servizi, monitorare l'utilizzo totale, analizzare dati e comunicare con te con maggiore efficacia. Potremmo combinare questi dati con informazioni di terze parti per offrirti una migliore esperienza e migliorare la qualità del nostro servizio. Non condividiamo alcun dato identificativo della persona con terze parti associate con il tuo UDID o posizione GPS senza la tua esplicita autorizzazione."
-      cookies title: "do not translate"
-      cookies text: "do not translate"
+      cookies title: "I cookie di LifeChurch.tv"
+      cookies text: "Quando visiti <a href='www.youversion.com'>www.youversion.com</a>, potremmo inviare al tuo computer uno o più cookie con lo scopo di identificare il tuo browser in modo univoco. (Un cookie è semplicemente un piccolo file di testo contenente una stringa di caratteri.) Accettare i nostri cookie ti consente di ricordare le tue preferenze da sessione a sessione. Sebbene la maggior parte dei browser accetti i cookie per impostazione predefinita, è possibile impostare il tuo browser in modo da rifiutare i cookie in generale oppure in modo da ricevere un avviso alla ricezione di un cookie. Alcune funzionalità e servizi YouVersion potrebbero non funzionare correttamente se i cookie sono disattivati."
       log title: "Informazioni di Log"
-      log text: "do not translate"
+      log text: "Quando usi YouVersion, i nostri server registrano automaticamente le informazioni che il tuo browser invia quando visiti uno dei nostri siti. Questi log dei server in genere includono informazioni quali richiesta web, indirizzo IP, tipo e lingua del browser, data e ora della tua richiesta e uno o più cookie che potrebbero identificare in modo univoco il tuo browser."
       communications title: "Comunicazioni utente"
-      communications text: "do not translate"
-      third party title: "Siti di terzi"
-      third party text: "do not translate"
+      communications text: "Le informazioni personali o richieste che invii via <a href='www.youversion.com/live'>www.youversion.com/live</a> saranno inviate all'amministratore di gruppo. L'amministratore di gruppo e/o uno dei suoi membri avrà accesso a queste informazioni. Quando invii un'email o un'altra comunicazione a qualsiasi sito di proprietà di LifeChurch.tv, potremmo conservare tali comunicazioni al fine di elaborare e soddisfare le tue richieste e di migliorare i nostri servizi."
+      third party title: "Siti di terze parti"
+      third party text: "La presente normativa sulla privacy è valida esclusivamente per siti e applicazioni di proprietà e gestiti da LifeChurch.tv. LifeChurch.tv non si ritiene responsabile di link ad altri siti accessibili dai nostri siti e servizi. Tali siti potrebbero inserire i propri cookie o altri file sul tuo computer, raccogliere dati o chiederti dati personali. È necessario conoscere bene le loro esclusive informative sulla privacy, qualora scegliessi di visitare i loro siti."
       information use title: "do not translate"
       information use text: "do not translate"
       information security title: "Come proteggiamo le tue informazioni?"
@@ -591,12 +593,6 @@ it:
       logos: "Logo YouVersion"
       icons: "Icone dell'App Bibbia"
       infographic: "Infografica: Statistiche e Utilizzazione App Bibbia"
-      iphone: "Raccolta Immagini: iPhone"
-      ipad: "Raccolta Immagini: iPad"
-      android: "Raccolta Immagini: Android"
-      blackberry: "Raccolta Immagini: BlackBerry"
-      win phone 7: "Raccolta Immagini: Windows Phone 7"
-      windows 8: "Raccolta Immagini: Windows 8"
       lifestyle: "Raccolta Immagini: Lifestyle"
       screencast: "Demo YouVersion"
     links title: "Link a Reportage sui Media"
