--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -119,6 +119,8 @@ mn:
   paginated items shown: "%{first_shown}&ndash;%{last_shown} -с %{total_available}"
   160 character limit: "160 тэмдэгтээс багагүй байх. "
   recent versions: "Сүүлд Хэрэглэсэн"
+  or:
+    lower: "эсвэл"
   likes:
     my likes: "Миний таалагдсан юмс"
     all likes: "Бүгд Таалагдсан"
@@ -132,6 +134,7 @@ mn:
     no community notes: "Сонгосон ишлэлүүдэд гишүүдийн тэмдэглэл олдсонгүй. Тэмдэглэл үүсгэхийн тулд Библи уншигч дотроос ишлэл сонгоод дараа Библи уншигч дээр байрлах Сонгогдсон товчлуур дээр дарна."
     public: "Нийтийн "
     private: "Хувийн"
+    is private: "Энэ тэмдэглэлийг хувийн байна."
     draft: "Ноорог"
     creation form errors: "Таны тэмдэглэлийг үүсгэх явцад дараах алдаа(нууд) гарлаа:"
     reference field: "Ишлэлийн тэмдэглэл (үүд):"
@@ -501,6 +504,11 @@ mn:
     must start to complete: " Дууссан уншлагаа хадгалахаар энэ тѳлѳвлѳгѳѳг эхлэх уу!"
     invalid reference: "Уучлаарай, Энэхүү уншлагт Библийн нэг ишлэлийн дугаар нь таны сонгосон Библийн орчуулгат байхгүй байж болзошгүй. Дээрх жагсаалтаас та өөр нэг Библийн орчлуулгыг сонгож үзээрэй. Хэрэт та хэвээрээ энэхүү үгсийг хүлээн авсаар байвал, манай <a href='%{support_url}'>дэмжлэгийн багт</a>  мэдэгдэнэ үү."
   registration:
+    placeholder:
+      email: "И-мэйл хаягаа оруул"
+      username: "Хэрэглэгчийн нэрээ оруул"
+      password: "Нууц үгээ оруул"
+    with email: "И-мэйл хаягаараа ашиглан бүртгүүлэх"
     with facebook: "Facebook ашиглан бүртгүүлэх"
     benefits title: "Бүрэн Давуу Талыг Эдлээрэй"
     benefits blurb: "YouVersion-д бүртгүүлсэнээр тэмдэглэл хийх, хавчуурга үүсгэх зэрэг давуу талуудыг та эдлэх болно. Мөн эдгээр зүйлс таны хэрэглэгчийн нэрээр нэвтрэн орсон бусад хэрэгслүүд дээр мөн харагдах болно. Бас нэгэн давуу тал нь Библийг бусад найзуудтайгаа хуваалцхад хялбарчлах зэрэг юм. Тиймээс та нэг хоёр хором зарцуулан бүртгүүлээрэй!"
@@ -591,12 +599,7 @@ mn:
       logos: "YouVersion Логонуудын Багц"
       icons: "Библи Апп Шигтгээ Зурагууд"
       infographic: "График: Библи Апп Статистикууд ба Хэрэглээ"
-      iphone: "Зургийн Сан: iPhone"
-      ipad: "Зургийн Сан: iPad"
-      android: "Зургийн Сан: Android"
-      blackberry: "Зургийн Сан: BlackBerry"
-      win phone 7: "Зургийн Сан: Windows Утас 7"
-      windows 8: "Зургийн Сан: Windows 8"
+      devices: "Зурагны Сан: Девайсууд"
       lifestyle: "Зургийн Сан: Амьдралын Хэв Маяг"
       screencast: "YouVersion Screencast"
     links title: "Хэвлэл Мэдээллээр Цацагдсан Холбоосууд"
@@ -629,6 +632,19 @@ mn:
       title: "Өөөх!"
       explanation: "Арын хэсэгт алдаа гарлаа! Хуудсыг дахин ачааллаж үзнэ үү, тавгүй явдал үүсгэсэн явдалд хүлцлэл өчье!"
       our action: "Энэ талаар бидэнд мэдэгдсэн бөгөөд аль болох түргэн засах болно."
+    home:
+      hero:
+        heading: "Үнэгүй Библи, таны утас, таб, болон компьютер дээр байна."
+        learn more: "доороос илүү сур"
+        start reading: "Уншиж эхлье"
+      features:
+        read heading: "Библи Унш."
+        study heading: "Библи Сур."
+        subscribe heading: "Библийн Тѳлѳвлѳгѳѳг Бүртгүүлэх."
+        download heading: "Библи тантай хамт авч явах."
+      get started: "Үнэгүй данс нээх."
+      word with you: "Бурханы Үгс тантай хамт."
+      download action: "Библи Апп Татаж Авах"
   shared:
     menu_settings:
       title: "Таны Тохиргоо"
@@ -667,3 +683,4 @@ mn:
     number of languages field: "Нийт Хэл:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Нийтийн Хүртээл "
+    loading: "Илүү Орчуулга Ачаалаж байна..."
