--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -119,6 +119,9 @@
   paginated items shown: "%{first_shown}&ndash;%{last_shown} av %{total_available}"
   160 character limit: "160 tegn eller mindre"
   recent versions: "Nylig brukt"
+  or:
+    lower: "eller"
+    upper: "ELLER"
   likes:
     my likes: "Mine \"liker\""
     all likes: "Alle \"liker\""
@@ -132,6 +135,7 @@
     no community notes: "Ingen fellesnotater med henvisning til valgte vers ble funnet. For å lage et notat, kan du velge et bibelvers og så klikke på 'Valgt' øverst i lesemodus."
     public: "Offentlig"
     private: "Privat"
+    is private: "Forespurt notat er privat."
     draft: "Utkast"
     creation form errors: "Følgende feil forhindret opprettelsen av ditt notat:"
     reference field: "Referanse(r):"
@@ -501,12 +505,18 @@
     must start to complete: "Abonner på denne planen for å lagre det du har lest."
     invalid reference: "Beklager, men en av skrifthenvisningene i denne andakten finnes ikke i den valgte bibelutgaven. Forsøk å velge en av de andre bibelutgavene ovenfor. Om du fremdeles får denne meldingen, meld fra om problemet til vårt <a href='%{support_url}'>support team</a>."
   registration:
+    placeholder:
+      email: "Fyll inn e-postadresse"
+      username: "Fyll inn brukernavn"
+      password: "Fyll inn passord"
+    with email: "Logg inn med e-postadressen din"
     with facebook: "Registrer deg med Facebook"
     benefits title: "Få den fullstendige opplevelsen"
     benefits blurb: "Å opprette en YouVersion-konto gir deg tilgang til flere funksjoner som bokmerker og notater. De vil vises på en hvilken som helst enhet der du er innlogget. En brukerkonto gjør det også enklere å dele Bibelen med dine venner, så ta et minutt eller to og registrer deg."
     plan blurb: "Det ser ut til at du ønsker å starte på en leseplan. Smart! Planer kan hjelpe deg å gjøre Bibelen til en del av ditt dagligliv. Logg inn eller registrer deg under og kom i gang!"
     bookmark blurb: "Det ser ut til at du ønsker å bruke et bokmerke. Flott! Bokmerker hjelper deg å holde oversikten på vers du vil lære, dele eller merke som favoritter. Logg inn eller registrer deg under og kom i gang!"
     friends blurb: "Det ser ut til at du ønsker å kommunisere med venner. God idé! Dere vil kunne dele det dere lærer og hjelpe hverandre å være på rett spor med målsettingene for lesing. Logg inn eller registrer deg under og kom i gang!"
+    share blurb: "Det ser ut til at du vil dele et bibelord. Flott. Du kan dele via Facebook eller Twitter. Logg inn eller opprett en brukerkonto lenger nede for å komme i gang!"
     highlight blurb: "Det ser ut til at du vil utheve et skriftsted. Flott! Uthevelser hjelper deg å organisere og finne igjen dine favorittvers. Logg inn eller opprett en konto nedenfor, og kom i gang!"
     note blurb: "Det ser ut til at du vil lage et notat til et skriftsted. Bra tenkt! Notater kan hjelpe deg å huske og organisere sannheter du oppdager i Guds Ord. Logg inn eller opprett en konto nedenfor, og kom igang!"
   audio:
@@ -591,12 +601,7 @@
       logos: "YouVersions logopakke"
       icons: "Bibel-appens ikoner"
       infographic: "Infografikk: Statistikk og bruk av Bibel-appen"
-      iphone: "Bildesamling: iPhone"
-      ipad: "Bildesamling: iPad"
-      android: "Bildesamling: Android"
-      blackberry: "Bildesamling: BlackBerry"
-      win phone 7: "Bildesamling: Windows Phone 7"
-      windows 8: "Bildesamling: Windows 8"
+      devices: "Bildesamling: Enheter"
       lifestyle: "Bildesamling: Lifestyle"
       screencast: "YouVersion screencast"
     links title: "Linker for mediedekning"
@@ -629,6 +634,28 @@
       title: "Ojsann!"
       explanation: "Noe gikk galt! Du kan forsøke igjen ved å laste inn siden på nytt. Vi er lei for det ekstra bryet!"
       our action: "Vi har fått melding om dette og vil ta oss av det så snart som mulig."
+    home:
+      hero:
+        heading: "En gratis Bibel på din telefon, nettbrett og pc."
+        description: "YouVersion er en enkel reklamefri Bibel som gir deg Guds Ord til ditt dagligliv."
+        learn more: "se mer lenger ned"
+        start reading: "Begynn å lese"
+        skip in future: "Ikke vis denne siden"
+        now skipped: "Denne siden vil ikke lenger vises."
+      features:
+        read heading: "Les Bibelen."
+        read description: "Velg blant <strong>hundrevis av bibelutgaver og språk</strong>. Sammenlikne to versjoner side ved side. Du kan også velge skrifttype og størrelse. La din opplevelse av Bibelen på nett være akkurat slik du ønsker den."
+        study heading: "Studer Bibelen."
+        study description: "<strong>Uthev</strong> med din favorittfarge, <strong>lag bokmerker</strong> for dine favorittvers, og lag notater om det du har lært. Ikke bare bruker du tid på Guds Ord, du bygger en oversikt over din bruk av Bibelen."
+        subscribe heading: "Start en leseplan."
+        subscribe description: "Les hele Bibelen, fokuser på et tema eller les en andaktsserie av en dyktig lærer. Velg din plan og du vil hver dag finne en bibeltekst som venter på deg."
+        download heading: "Ta Bibelen med deg."
+        download description: "<a href='http://youversion.com/download'>Last ned</a> Bibel-appen gratis for enhver mobil enhet. Når du bruker appen, vil notater, bokmerker, uthevinger, planer og mer bli synkronisert automatisk mellom alle dine enheter."
+      get started: "Kom i gang med din gratis brukerkonto."
+      word with you: "Guds Ord er med deg."
+      download action: "Last ned Bibel-Appen"
+      download description: "Last ned gratis YouVersion Bibel-App til din mobile enhet og du har med deg Bibelen over alt."
+      world installs: "Installeres verden over"
   shared:
     menu_settings:
       title: "Leseinnstillinger"
@@ -667,3 +694,5 @@
     number of languages field: "Totalt antall språk:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Offentlig område"
+    loading: "Laster inn flere oversettelser..."
+    load error: "Det var et problem med å laste flere utgaver. Lukk denne menyen og åpne på nytt for å prøve igjen."
