--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -119,6 +119,8 @@ ru:
   paginated items shown: "%{first_shown}&ndash;%{last_shown} из %{total_available}"
   160 character limit: "Не более 160 символов"
   recent versions: "Недавно использованные"
+  or:
+    lower: "или"
   likes:
     my likes: "Понравилось мне"
     all likes: "Всё понравившееся"
@@ -132,6 +134,7 @@ ru:
     no community notes: "К выбранным стихам сообщество не написало ещё ни одной заметки. Для создания заметки выберите стих в окне чтения Библии, а затем нажмите кнопку \"Выбранное\" в верхней части окна чтения."
     public: "Публичная"
     private: "Личная"
+    is private: "Заметка закрыта для просмотра."
     draft: "Черновик"
     creation form errors: "Вы не смогли создать заметку, по следующим причинам:"
     reference field: "Ссылки:"
@@ -501,6 +504,11 @@ ru:
     must start to complete: "Начните план, чтобы сохранить свой прогресс!"
     invalid reference: "К сожалению, одна из ссылок на Писание для этого чтения может не существовать в выбранном переводе. Попробуйте выбрать другой перевод. Если вы по-прежнему видите это сообщение, пожалуйста, сообщите о проблеме в нашу <a href='%{support_url}'>службу поддержки</a>."
   registration:
+    placeholder:
+      email: "Введите адрес емейл"
+      username: "Введите имя пользователя"
+      password: "Введите пароль"
+    with email: "Зарегистрироваться с помощью емейла"
     with facebook: "Зарегистрироваться через Facebook"
     benefits title: "Получите доступ ко всем функциям!"
     benefits blurb: "Аккаунт YouVersion даст Вам доступ к таким замечательным функциям, как, например, заметки и закладки. Они будут отображаться на любом устройстве, если Вы войдёте под своей учётной записью. Аккаунт также позволяет легче делиться Библией с друзьями, а регистрация занимает всего минуту!"
@@ -591,12 +599,7 @@ ru:
       logos: "Набор логотипов YouVersion"
       icons: "Иконки Приложения Библия"
       infographic: "Инфографик: Статистика и использование Приложения Библия"
-      iphone: "Колекция изображений: iPhone"
-      ipad: "Колекция изображений: iPad"
-      android: "Колекция изображений: Android"
-      blackberry: "Колекция изображений: BlackBerry"
-      win phone 7: "Коллекция изображений: Window Phone 7"
-      windows 8: "Коллекция изображений: Windows 8"
+      devices: "Коллекция изображений: Устройства"
       lifestyle: "Колекция изображений: Стиль жизни"
       screencast: "Скринкаст YouVersion"
     links title: "Ссылки на трансляции в масс медиа"
@@ -629,6 +632,23 @@ ru:
       title: "Ой-ой-ой!"
       explanation: "Что-то пошло не так на сервере! Попробуйте обновить страницу и примите наши извинения за доставленные неудобства!"
       our action: "Мы получили уведомление об этой ошибке и займёмся её решением как можно скорее."
+    home:
+      hero:
+        heading: "Бесплатная Библия на вашем мобильном устройстве и компьютере."
+        description: "YouVersion - бесплатный онлайн сервис, который делает Слово Божие частью вашей повседневной жизни."
+        learn more: "узнать больше"
+        start reading: "Начать чтение"
+        skip in future: "Больше не показывать эту страницу"
+        now skipped: "Страница больше не будет показана."
+      features:
+        read heading: "Читайте Библию."
+        study heading: "Изучайте Библию."
+        subscribe heading: "Читайте Библию по планам."
+        download heading: "Берите Библию с собой."
+      get started: "Создайте бесплатный аккаунт."
+      word with you: "Слово Божие всегда с вами."
+      download action: "Установить приложение Библия"
+      world installs: "людей уже установили приложение Библия!"
   shared:
     menu_settings:
       title: "Настройки окна чтения"
@@ -667,3 +687,4 @@ ru:
     number of languages field: "Всего языков:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Всеобщее достояние"
+    loading: "Загружаю список переводов..."
