--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -119,6 +119,9 @@ sk:
   paginated items shown: "%{first_shown}&ndash;%{last_shown} z %{total_available}"
   160 character limit: "160 znakov alebo menej"
   recent versions: "Nedávno použité"
+  or:
+    lower: "alebo"
+    upper: "ALEBO"
   likes:
     my likes: "Moje označenia páči sa mi to"
     all likes: "Všetky označenia páči sa mi to"
@@ -132,6 +135,7 @@ sk:
     no community notes: "Nenašli sa žiadne komunitné poznámky odkazujúce na označené verše. Ak chcete vytvoriť poznámku, označte verš v Biblii a kliknite na tlačítko Označené na vrchu stránky."
     public: "Verejná"
     private: "Súkromná"
+    is private: "Požadovaná poznámka je súkromná."
     draft: "Návrh"
     creation form errors: "Nasledujúce chyby zabránili vytvoreniu vašej poznámky:"
     reference field: "Súradnice:"
@@ -501,12 +505,18 @@ sk:
     must start to complete: "Aby ste si mohli zaznačiť prečítaný úsek, je potrebné začať tento plán čítania!"
     invalid reference: "Prepáčte, v tomto preklade nie sú dostupné jedny, alebo viacero súradníc zo zvoleného čítania. Skúste si z ponuky vyššie zvoliť iný preklad. Ak sa aj napriek tomu táto hláška opakuje, dajte o tom prosím vedieť nášmu <a href='%{support_url}'>tímu podpory</a>."
   registration:
+    placeholder:
+      email: "Zadajte vašu emailovú adresu"
+      username: "Zadajte vaše prihlasovacie meno"
+      password: "Zadajte vaše heslo"
+    with email: "Prihláste sa so svojou emailovou adresou"
     with facebook: "Zaregistrovať sa s Facebook účtom"
     benefits title: "Získajte maximum"
     benefits blurb: "Vytvorenie YouVersion účtu vám poskytne prístup k mnohým funkciám, ako napríklad záložky a poznámky. Zobrazia sa na ktoromkoľvek zariadení, kde sa prihlásite. Účet tiež zjednodušuje možnosť zdieľať verše z Biblie s priateľmi, takže neváhajte a zaregistrujte sa, trvá to len zopár minút!"
     plan blurb: "Zdá sa, že chcete začať plán čítania. Výborne! Plány vám pomáhajú spraviť z Biblie súčasť vášho každodenného života. Prihláste sa, alebo si vytvorte účet a začnite čítať!"
     bookmark blurb: "Zdá sa, že chcete použiť záložku. Skvelé! Záložky vám pomáhajú udržovať si prehľad o veršoch, ktoré sa chcete naučiť naspamäť, zdieľať ich, alebo si ich chcete označiť ako obľúbené. Prihláste sa, alebo si vytvorte účet a začnite!"
     friends blurb: "Zdá sa, že chcete zdieľať Bibliu s priateľmi. Dobrý nápad! Budete tak môcť zdieľať, čo čítate a pomáhať jeden druhému nezaostávať v plánoch čítania. Prihláste sa, alebo si vytvorte účet a začnite!"
+    share blurb: "Vyzerá to tak, že chcete zdieľať Božie Slovo. Výborne! S používateľským účtom budete môcť zdieľať verše na Facebook alebo Twitter. Prihláste sa, alebo si nižšie vytvorte účet a môžete začať!"
     highlight blurb: "Zdá sa, že si chcete zvýrazniť časť Písma. Výborne! Zvýraznenia vám pomáhajú organizovať a udržiavať prehľad o vašich obľúbených veršoch. Prihláste sa, alebo si vytvorte účet a môžete začať!"
     note blurb: "Zdá sa, že si chcete urobiť poznámku o časti Písma. Dobrý nápad! Poznámky vám pomáhajú zapamätať a usporiadať si všetky dôležité veci, ktoré objavíte v Božom Slove. Prihláste sa, alebo si vytvorte účet a môžete začať!"
   audio:
@@ -591,12 +601,7 @@ sk:
       logos: "Balík log YouVerison"
       icons: "Ikony aplikácie Biblia"
       infographic: "Infografika: Štatistiky a používanosť aplikácie Biblia"
-      iphone: "Zbierka obrázkov: iPhone"
-      ipad: "Zbierka obrázkov: iPad"
-      android: "Zbierka obrázkov: Android"
-      blackberry: "Zbierka obrázkov: BlackBerry"
-      win phone 7: "Zbierka obrázkov: Windows Phone 7"
-      windows 8: "Zbierka obrázkov: Windows 8"
+      devices: "Zbierka obrázkov: Zariadenia"
       lifestyle: "Zbierka obrázkov: Zo života"
       screencast: "Ilustračné video YouVersion"
     links title: "Médiá o YouVersion"
@@ -629,6 +634,28 @@ sk:
       title: "Hups!"
       explanation: "Pri načítavaní stránky sa niečo nepodarilo! Môžete sa pokúsiť stránku načítať znova. Ospravedlňujeme sa za nepríjemnosti!"
       our action: "Na chybu sme boli upozornení a pozrieme sa na ňu hneď, ako to bude možné."
+    home:
+      hero:
+        heading: "Bezplatná Biblia vo vašom telefóne, tablete, či počítači."
+        description: "YouVersion je jednoduchá a bezplatná Biblia, ktorá prináša Božie Slovo do vášho každodenného života."
+        learn more: "zistite viac nižšie"
+        start reading: "Začať čítať"
+        skip in future: "Túto stránku nabudúce preskočiť"
+        now skipped: "Táto stránka bude vynechaná."
+      features:
+        read heading: "Čítajte Bibliu."
+        read description: "Vyberte si zo <strong>stoviek prekladov Biblie v mnohých jazykoch</strong>. Porovnávajte paralelne dva preklady. Nastavte si vlastný typ písma a veľkosť. Prispôsobte si online Bibliu tak, ako vám to vyhovuje."
+        study heading: "Študujte Bibliu."
+        study description: "<strong>Zvýraznite</strong> si verše vašou obľúbenou farbou, pridajte si ich medzi <strong>záložky</strong> a robte si poznámky o tom, čo vám čítanie dalo. Nie len že tak budete tráviť čas s Božím Slovom, môžete si tým aj tvoriť záznamy svojej interakcie s Bibliou."
+        subscribe heading: "Využite plány čítania."
+        subscribe description: "Prejdite celú Bibliu, zamerajte sa len na jednu tému, alebo si prečítajte úseky vybrané nadanými učiteľmi. Zvoľte si váš plán a každý deň vás bude čakať pasáž Biblie."
+        download heading: "Vezmite si Bibliu so sebou."
+        download description: "<a href='http://youversion.com/download'>Stiahnite si</a> bezplatnú Aplikáciu Biblia na akékoľvek mobilné zariadenie. Keď používate túto mobilnú aplikáciu, vaše poznámky, záložky, zvýraznenia a plány sa automaticky synchronizujú so všetkymi vašimi zariadeniami."
+      get started: "Začnite s vašim bezplatným účtom."
+      word with you: "Božie Slovo je s vami."
+      download action: "Stiahnite si aplikáciu Biblia"
+      download description: "Stiahnite si bezplatnú aplikáciu YouVersion Biblia do vášho mobilného zariadenia a Bibliu budete mať so sebou kamkoľvek pôjdete."
+      world installs: "Inštalácií po celom svete"
   shared:
     menu_settings:
       title: "Nastavenia zobrazenia"
@@ -667,3 +694,5 @@ sk:
     number of languages field: "Počet jazykov:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Voľne dostupné"
+    loading: "Načítava sa viac prekladov..."
+    load error: "Prepáčte, nepodarilo sa načítať viac prekladov. Zavrite toto menu a otvorte ho znova."
