--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -119,6 +119,9 @@ vi:
   paginated items shown: "%{first_shown}&ndash;%{last_shown} trong số %{total_available}"
   160 character limit: "Dưới 160 ký tự"
   recent versions: "Sử dụng gần đây"
+  or:
+    lower: "hoặc"
+    upper: "HOẶC"
   likes:
     my likes: "Các ưa thích của tôi"
     all likes: "Tất cả ưa thích"
@@ -132,6 +135,7 @@ vi:
     no community notes: "Không có ghi chú cộng đồng nào để tham khảo cho các câu được chọn. Để tạo ghi chú, hãy chọn một câu Kinh Thánh trong bài đọc và nhấp \"Đã chọn\" ở phía trên của màn hình."
     public: "Công cộng"
     private: "Riêng tư"
+    is private: "Ghi chú này là riêng tư."
     draft: "Bản nháp"
     creation form errors: "Các lỗi sau không cho phép bạn tạo ghi chú:"
     reference field: "Tham khảo:"
@@ -501,12 +505,18 @@ vi:
     must start to complete: "Bắt đầu kế hoạch này để lưu lại các phần đã đọc xong!"
     invalid reference: "Xin lỗi bạn, một trong các tham khảo Kinh Thánh này không có trong bản dịch được chọn. Hãy thử chọn một bản dịch khác ở trên. Nếu bạn vẫn nhận được thông báo này, hãy cho <a href='%{support_url}'>nhóm hỗ trợ</a> của chúng tôi biết."
   registration:
+    placeholder:
+      email: "Nhập địa chỉ email"
+      username: "Nhập tên sử dụng"
+      password: "Nhập mật khẩu"
+    with email: "Đăng ký bằng địa chỉ email"
     with facebook: "Đăng ký bằng Facebook"
     benefits title: "Tận dụng mọi tính năng!"
     benefits blurb: "Tài khoản YouVersion cho phép bạn truy cập các chức năng như đánh dấu và ghi chú trên bất cứ thiết bị nào mà bạn đăng nhập. Tài khoản cũng giúp bạn dễ dàng chia sẻ Kinh Thánh với bạn bè, vậy nên hãy dành chút thời gian để đăng ký!"
     plan blurb: "Có vẻ như bạn muốn bắt đầu kế hoạch đọc Kinh Thánh. Thật tuyệt vời! Chúng sẽ giúp Kinh Thánh trở thành một phần trong đời sống hằng ngày của bạn. Hãy đăng nhập hoặc tạo tài khoản để bắt đầu!"
     bookmark blurb: "Có vẻ như bạn muốn tạo đánh dấu sách. Hay quá! Các đánh dấu sẽ giúp bạn theo dõi các câu Kinh Thánh mà bạn muốn ghi nhớ, chia sẻ, và làm dấu yêu thích. Hãy đăng nhập hoặc tạo tài khoản để bắt đầu!"
     friends blurb: "Có vẻ như bạn đang muốn liên hệ với bạn bè. Một ý tưởng tuyệt vời! Bạn có thể chia sẻ những gì mình học được và giúp nhau đạt các mục tiêu đọc Kinh Thánh. Hãy đăng nhập hoặc tạo tài khoản để bắt đầu!"
+    share blurb: "Có vẻ bạn muốn chia sẻ Kinh Thánh. Hay quá! Bạn có thể chia sẻ qua Facebook hoặc Twitter. Hãy đăng nhập hoặc tạo tài khoản bên dưới để bắt đầu!"
     highlight blurb: "Có vẻ như bạn muốn tô màu câu Kinh Thánh. Vậy tốt quá! Các tô màu sẽ giúp bạn sắp xếp và theo dõi các câu gốc yêu thích. Hãy đăng nhập hoặc tạo tài khoản bên dưới để bắt đầu!"
     note blurb: "Có vẻ như bạn muốn ghi chú về Kinh Thánh. Tốt lắm! Các ghi chú sẽ giúp bạn ghi nhớ và sắp xếp các lẽ thật mà bạn khám phá từ Lời Chúa. Hãy đăng nhập hoặc tạo tài khoản bên dưới để bắt đầu!"
   audio:
@@ -591,12 +601,7 @@ vi:
       logos: "Loạt biểu tượng YouVersion"
       icons: "Biểu tượng Ứng dụng Kinh Thánh"
       infographic: "Biểu đồ thống kê và sử dụng Ứng dụng Kinh Thánh"
-      iphone: "Tổng hợp hình ảnh: iPhone"
-      ipad: "Tổng hợp hình ảnh: iPad"
-      android: "Tổng hợp hình ảnh: Android"
-      blackberry: "Tổng hợp hình ảnh: BlackBerry"
-      win phone 7: "Tổng hợp hình ảnh: Windows Phone 7"
-      windows 8: "Tổng hợp hình ảnh: Windows 8"
+      devices: "Tổng hợp hình ảnh: Thiết bị"
       lifestyle: "Tổng hợp hình ảnh: Lifestyle"
       screencast: "Màn hình YouVersion"
     links title: "Đường dẫn tin tức truyền thông"
@@ -629,6 +634,28 @@ vi:
       title: "Ối!"
       explanation: "Có trục trặc kỹ thuật! Bạn có thể tải lại trang này để thử lại, chúng tôi thật sự xin lỗi!"
       our action: "Chúng tôi đã được thông báo về điều này và sẽ giải quyết nó sớm nhất có thể!"
+    home:
+      hero:
+        heading: "Kinh Thánh miễn phí trên thiết bị di động và máy bàn"
+        description: "YouVersion là ứng dụng Kinh Thánh giúp mang Lời Chúa vào đời sống hằng ngày của bạn."
+        learn more: "Tìm hiểu thêm dưới đây"
+        start reading: "Bắt đầu đọc"
+        skip in future: "Bỏ trang này trong tương lai"
+        now skipped: "Trang này sẽ được bỏ qua."
+      features:
+        read heading: "Đọc Kinh Thánh"
+        read description: "Hãy lựa chọn từ <strong>hàng trăm bản Kinh Thánh và ngôn ngữ</strong>. Xem và so sánh hai bản cùng lúc. Chọn kiểu chữ và cỡ chữ. Trải nghiệm đọc Kinh Thánh theo ý bạn."
+        study heading: "Học Kinh Thánh"
+        study description: "Chọn <strong>màu tô</strong> bạn muốn, <strong>đánh dấu</strong> câu Kinh Thánh bạn yêu thích, và tạo ghi chú về những gì bạn học được. Bạn không chỉ dành thời gian cho Kinh Thánh mà còn ghi lại quá trình kinh nghiệm Lời Chúa của mình."
+        subscribe heading: "Đăng ký kế hoạch đọc Kinh Thánh"
+        subscribe description: "Bao quát toàn bộ Kinh Thánh, tập trung vào một chủ đề, hoặc đọc tĩnh nguyện từ một người thầy dạy được ơn. Hãy chọn một kế hoạch đọc Kinh Thánh mỗi ngày cho bạn!"
+        download heading: "Mang Kinh Thánh theo bạn"
+        download description: "<a href='http://youversion.com/download'>Tải</a> Ứng dụng Kinh Thánh miễn phí cho bất cứ thiết bị di động nào. Khi bạn sử dụng, toàn bộ ghi chú, đánh dấu, tô màu, kế hoạch... sẽ tự động đồng bộ hóa trong tất cả thiết bị của bạn."
+      get started: "Bắt đầu với tài khoản miễn phí"
+      word with you: "Lời Chúa ở cùng bạn."
+      download action: "Tải Ứng dụng Kinh Thánh"
+      download description: "Tải Ứng dụng Kinh Thánh miễn phí YouVersion về thiết bị di động của bạn và mang Kinh Thánh theo bất cứ nơi nào bạn đi."
+      world installs: "Cài đặt trên toàn cầu"
   shared:
     menu_settings:
       title: "Cài đặt giao diện đọc"
@@ -667,3 +694,5 @@ vi:
     number of languages field: "Tổng số ngôn ngữ:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Miền công cộng"
+    loading: "Đang tải thêm bản dịch..."
+    load error: "Xin lỗi bạn, có vấn đề khi tải thêm bản dịch. Hãy đóng trình đơn này rồi mở ra thử lại."
