--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -119,6 +119,9 @@ ko:
   paginated items shown: "%{total_available} 중 %{first_shown}&ndash;%{last_shown}"
   160 character limit: "160자 이하"
   recent versions: "최근 사용 번역본"
+  or:
+    lower: "또는"
+    upper: "혹은"
   likes:
     my likes: "나의 좋아요"
     all likes: "전체 좋아요"
@@ -132,6 +135,7 @@ ko:
     no community notes: "선택하신 구절에 관한 공동체 노트가 없습니다. 노트 작성을 원하시면 성경 리더에서 원하는 구절을 선택한 후 리더 상단에 있는  '선택' 버튼을 클릭하면 됩니다."
     public: "공개"
     private: "비공개"
+    is private: "요청하신 노트는 비공개입니다."
     draft: "임시저장"
     creation form errors: "다음의 오류로인해서 노트가 생성되지 않았습니다:"
     reference field: "참조구절:"
@@ -501,6 +505,11 @@ ko:
     must start to complete: "읽기를 저장하려면 먼저 이 읽기계획을 시작해야 합니다."
     invalid reference: "죄송합니다.  이 성경읽기에서 언급된 참고 구절중 일부가 이 번역본에는 없습니다.  다른 번역본을 선택해주세요.  이 메시지가 반복적으로 나타나면 <a href='%{support_url}'>지원팀</a> 으로 연락주십시요."
   registration:
+    placeholder:
+      email: "이메일 주소를 입력해주세요"
+      username: "사용자명을 입력해주세요"
+      password: "비밀 번호를 입력해주세요"
+    with email: "이메일 주소로 로그인"
     with facebook: "페이스북 계정으로 등록"
     benefits title: "완전한 체험을 하세요"
     benefits blurb: "YouVersion 계정을 만드시면 책갈피 및 노트와 같은 더 많은 기능들을 활용할 수 있습니다. 어느 기기에서 로그인을 하든지 관계 없이 확인이 가능합니다. 계정을 만들면 친구들과 말씀을 공유하는 것이 더 쉬워집니다. 지금 가입하세요!"
@@ -591,12 +600,7 @@ ko:
       logos: "YouVersion 로고 모음"
       icons: "성경앱 아이콘"
       infographic: "통계표: 성경앱 통계와 사용"
-      iphone: "이미지 모음: 아이폰"
-      ipad: "이미지 모음: 아이패드"
-      android: "이미지 모음: 안드로이드"
-      blackberry: "이미지 모음: 블랙베리"
-      win phone 7: "이미지 모음: Windows Phone 7"
-      windows 8: "이미지 모음: Windows 8"
+      devices: "이미지 모음: 기기들"
       lifestyle: "이미지 모음: 라이프스타일"
       screencast: "YouVersion 스크린캐스트"
     links title: "관련 미디어 링크"
@@ -629,6 +633,28 @@ ko:
       title: "죄송합니다."
       explanation: "이유를 알 수 없는 오류가 발생했습니다.  로딩을 다시 해주세요.  불편을 끼쳐드려서 죄송합니다."
       our action: "알려주셔서 감사합니다.  즉시 처리되도록 최선을 다하겠습니다."
+    home:
+      hero:
+        heading: "스마트 폰, 태블렛, 컴퓨터에서 보는 무료 성경 "
+        description: "YouVersion 은 일상 삶중에 하나님의 말씀을 손쉽고 광고없이 보여주는 성경입니다."
+        learn more: "더 자세히 알아보기"
+        start reading: "읽기 시작"
+        skip in future: "더 이상 이 페이지 안보기"
+        now skipped: "더 이상 이 페이지를 보여주지 않습니다."
+      features:
+        read heading: "성경 읽기"
+        read description: " <strong>각종언어로 번역된 수백개의 번역본</strong> 이 있습니다 . 두개의 번역본을 비교하시면서 읽으시거나, 원하시는 글꼴이나 크기로 온라인에서 성경을 읽으실 수있습니다."
+        study heading: "성경 공부"
+        study description: "선호하시는 색깔로 본문을 <strong>하이라이트</strong> 하시거나, 원하시는 구절을 <strong>책갈피</strong> 하실 수있습니다. 그리고 묵상하시는 내용을 노트에 남길 수도 있습니다. 하나님의 말씀을읽는 것에 그치지 않고 읽으시면서 느낀 점을 기록으로도 남길 수있습니다. "
+        subscribe heading: "성경 읽기 계획 구독신청"
+        subscribe description: "성경 전체를 완독하시거나, 주제별로 읽으실 수있습니다. 그리고 훌륭한 교사들의 묵상을 읽을 수도 있습니다.  성경읽기 계획을 선택하시기만 하면 매일 분량의 성경 내용이 자동으로 기다립니다."
+        download heading: "전천후 성경"
+        download description: "원하시는 이동기기에서 바이블 앱을 무료로 <a href='http://youversion.com/download'>다운로드</a> 받으세요. 개인 노트, 북마크, 하이라이트, 읽기 계획 등이 자동으로 동기화 되므로, 어떤 앱에서든   같은 내용을 보실 수있습니다."
+      get started: "무료 계정을 지금 만드셔서 바로 시작하세요. "
+      word with you: "하나님의 말씀이 당신과 함께 합니다."
+      download action: "바이블 앱 다운로드 하기"
+      download description: "무료인 YouVersion 바이블 앱을 여러분의 이동기기에 다운로드하시면 어디서든 여러분의 개인 성경을 읽으실 수있습니다."
+      world installs: "지구촌 전체에 걸쳐 설치되었습니다."
   shared:
     menu_settings:
       title: "설정내용"
@@ -667,3 +693,5 @@ ko:
     number of languages field: "전체 언어수:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "공개판"
+    loading: "번역본 추가 로딩중 ..."
+    load error: "번역본을 추가로 로딩하는 중 오류가 발생했습니다.  메뉴를 닫으신 후에 새로 시도를 해주세요."
