--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -119,6 +119,9 @@ pt-PT:
   paginated items shown: "%{first_shown}&ndash;%{last_shown} de %{total_available}"
   160 character limit: "160 caracteres ou menos"
   recent versions: "Usado Recentemente"
+  or:
+    lower: "ou"
+    upper: "OU"
   likes:
     my likes: "Os meus Gosto´s"
     all likes: "Todos os Gosto´s"
@@ -132,6 +135,7 @@ pt-PT:
     no community notes: "Não existem notas da comunidade referentes aos versos selecionados. Para criar uma nota, escolha um verso no leitor da Bíblia e depois clique no botão Selecionado no topo do leitor."
     public: "Público"
     private: "Privado"
+    is private: "A nota pretendida é privada."
     draft: "Rascunho"
     creation form errors: "O(s) seguinte(s) erro(s) impede(m) a criação da sua nota:"
     reference field: "Referência(s):"
@@ -501,12 +505,18 @@ pt-PT:
     must start to complete: "Comece este plano para guardar as leituras já completas!"
     invalid reference: "Desculpe, uma das referências às escrituras desta leitura pode não existir na versão selecionada. Tente selecionar em cima uma versão diferente. Se ainda assim continuar a ver esta mensagem, por favor informe a nossa <a href='%{support_url}'>equipe de suporte</a> sobre esta ocorrência."
   registration:
+    placeholder:
+      email: "Insira o seu endereço de email"
+      username: "Insira o seu nome de utilizador"
+      password: "Insira a sua palavra-passe"
+    with email: "Registe-se utilizando o seu endereço de email"
     with facebook: "Registe-se com o Facebook"
     benefits title: "Tenha a Experiência Completa"
     benefits blurb: "Criar uma conta YouVersion dá-lhe acesso a mais funcionalidades tais como marcadores e notas. Estas aparecerão no seu dispositivo quando se autenticar. Uma conta também torna mais fácil partilhar a Bíblia com os seus amigos, por isso perca um minuto ou dois e registe-se!"
     plan blurb: "Parece que deseja iniciar um Plano de Leitura. Ótimo! Planos ajudam-no a fazer da Bíblia uma parte integrante do seu dia-a-dia. Autentique-se ou crie uma conta em baixo para começar!"
     bookmark blurb: "Parece que deseja usar um marcador. Excelente! Marcadores ajudam-no a manter um registo de versos que pretende memorizar, partilhar ou marcar como favoritos. Autentique-se ou crie uma conta em baixo para começar!"
     friends blurb: "Parece que deseja interagir com Amigos. Grande Ideia! Terá a possibilidade de partilhar os seus novos conhecimentos e ajudar outros a cumprirem as suas metas de leitura. Autentique-se ou crie uma conta em baixo para começar!"
+    share blurb: "Parece que quer partilhar as Escrituras. Ótimo! Poderá partilhar as Escrituras através do Facebook ou Twitter. Entre ou crie uma conta em baixo para começar!"
     highlight blurb: "Parece que pretende destacar texto das escrituras. Ótimo! Destaques ajudam a organizar e manter ordenados os seus versos favoritos. Autentique-se ou crie uma conta em baixo e comece já!"
     note blurb: "Parece que pretende criar uma nota sobre um texto das escrituras. Boa ideia! Notas ajudam a lembrar e organizar a verdade que descobre na Palavra de Deus. Autentique-se ou crie uma conta em baixo e comece já!"
   audio:
@@ -591,12 +601,7 @@ pt-PT:
       logos: "Pacote de Logótipos YouVersion"
       icons: "Ícones da App da Bíblia"
       infographic: "Infografia: Uso e Estatísticas YouVersion"
-      iphone: "Coleção de Imagens: iPhone"
-      ipad: "Coleção de Imagens: iPad"
-      android: "Coleção de Imagens: Android"
-      blackberry: "Coleção de Imagens: Blackberry"
-      win phone 7: "Coleção de Imagens: Windows Phone 7"
-      windows 8: "Coleção de Imagens: Windows 8"
+      devices: "Coleção de Imagens: Dispositivos"
       lifestyle: "Coleção de Imagens: Lifestyle"
       screencast: "Gravações YouVersion"
     links title: "Cobertura nos Meios de Comunicação"
@@ -629,6 +634,28 @@ pt-PT:
       title: "Oops!"
       explanation: "Algo correu mal nos bastidores! Pode tentar novamente actualizando a página, pedimos desculpa pelo inconveniente!"
       our action: "Fomos notificados desta ocorrência e iremos tratar dela assim que for possível."
+    home:
+      hero:
+        heading: "Uma Bíblia gratuita no seu telefone, tablet e computador."
+        description: "A YouVersion é uma Bíblia simples, sem publicidade, que traz a Palavra de Deus à sua vida diária."
+        learn more: "saiba mais"
+        start reading: "Começar a ler"
+        skip in future: "No futuro, saltar esta página"
+        now skipped: "Não acederá mais a esta página "
+      features:
+        read heading: "Leia a Bíblia."
+        read description: "Faça a sua escolha a partir de <strong>centenas de versões da Bíblia em múltiplos idiomas</strong>. Compare duas versões em paralelo. Pode até escolher o tamanho e o tipo de fonte. Desfrute da leitura online da Bíblia da maneira mais conveniente para si."
+        study heading: "Estude a Bíblia."
+        study description: "<strong>Destaque</strong> na sua cor preferida, <strong>adicione marcadores</strong> aos seus versículos da Bíblia preferidos, e crie notas sobre o que está a aprender. Não está apenas a passar tempo com a Palavra de Deus, mas a construir um histórico da sua interação com a Bíblia."
+        subscribe heading: "Subscreva um Plano de Leitura."
+        subscribe description: "Leia a Bíblia toda, escolha um tema específico, ou leia um devocional escrito por um entendido. Escolha o seu plano e a cada dia irá encontrar um trecho da Bíblia à sua espera."
+        download heading: "Leve a Bíblia consigo."
+        download description: "<a href='http://youversion.com/download'>Transfira</ a> gratuitamente a App da Bíblia em qualquer dispositivo móvel. Quando usar a App, as suas notas, marcadores, destaques e planos serão automaticamente sincronizados em todos os seus dispositivos."
+      get started: "Comece com a sua conta gratuita."
+      word with you: "A Palavra de Deus está consigo."
+      download action: "Transfira a App da Bíblia"
+      download description: "Transfira gratuitamente a App da Bíblia no seu dispositivo móvel e terá a Bíblia consigo em qualquer lugar."
+      world installs: "Instalações ao redor do mundo"
   shared:
     menu_settings:
       title: "Definições do Leitor"
@@ -667,3 +694,5 @@ pt-PT:
     number of languages field: "Total de Idiomas:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Domínio Público"
+    loading: "Descarregando mais versões ..."
+    load error: "Desculpe, houve um problema ao descarregar mais versões. Feche este menu e tente novamente."
