--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -119,6 +119,9 @@ zh-CN:
   paginated items shown: "%{total_available}中的 %{first_shown}&ndash;%{last_shown}"
   160 character limit: "少于160个字"
   recent versions: "最近使用的圣经版本"
+  or:
+    lower: "或"
+    upper: "或"
   likes:
     my likes: "我喜欢的"
     all likes: "所有喜欢的"
@@ -132,6 +135,7 @@ zh-CN:
     no community notes: "未找到任何有参考经文的社区笔记。要创建笔记，请在圣经阅读器中选择一个经节，然后在顶部点击【选中的】按钮。"
     public: "公开"
     private: "不公开"
+    is private: "您想要访问的笔记是保密的。"
     draft: "草稿"
     creation form errors: "以下错误使您不能创建笔记："
     reference field: "经节："
@@ -274,7 +278,7 @@ zh-CN:
       log title: "日志信息"
       log text: "当您使用 YouVersion 时，我们的服务器会在您访问我们的网站时自动记录您的浏览器所发送的信息。这些服务器记录的信息包括您的网页请求，IP 地址，浏览器类型，浏览器语言，请求日期与时间，以及可以识别您的浏览器的一个或多个 Cookie。"
       communications title: "用户通讯"
-      communications text: "您通过 <a href='www.youversion.com/live'>www.youversion.com/live</a>提交的个人信息或请求会被发送到群组管理员那里。群组管理员或者其中一个管理员将会处理这些信息。当您通过发送电子邮件或者信息给 LifeChurch.tv 所属的任何一个网站，我们将保留这些信息来处理您的问题，回应您的请求并改善我们的服务。"
+      communications text: "您通过 <a href='www.youversion.com/live'>www.youversion.com/live</a> 提交的个人信息或请求会被发送到群组管理员那里。群组管理员或者其中一个管理员将会处理这些信息。当您通过发送电子邮件或者信息给 LifeChurch.tv 所属的任何一个网站，我们将保留这些信息来处理您的问题，回应您的请求并改善我们的服务。"
       third party title: "第三方站点"
       third party text: "本隐私政策仅适用于由 LifeChurch.tv 所有并运营的网站和应用程序。 LifeChurch.tv 不能控制其他从我们的网页和服务链接出去的其他网站。其他网站可能在您的电脑上储存它们的缓存或其他文件，收集数据或者要求您的个人资料。如果选择访问他们的网站，您需要详细了解他们各自的隐私政策。"
       information use title: "我们会如何使用您的信息？"
@@ -416,13 +420,13 @@ zh-CN:
     all plans: "全部读经计划"
     all category plans: "所有 %{category} 类读经计划"
     my plans: "我的读经计划"
-    none found: "无法找到匹配您的要求的计划。请扩大搜索范围再试。"
+    none found: "无法找到合乎您要求的计划。请扩大搜索范围再试。"
     about publisher: "关于出版者"
     overview: "计划概览"
     start: "开始该计划"
     length field: "计划长度："
     view sample: "预览"
-    users subscribed: "%{user_count}位用户阅读该计划"
+    users subscribed: "目前有 %{user_count} 位用户正在订阅该计划"
     more info: "更多信息"
     about this plan: "读经计划介绍"
     about the publisher: "出版者信息"
@@ -501,6 +505,11 @@ zh-CN:
     must start to complete: "请开始这个读经计划来保存已完成的读经！"
     invalid reference: "很抱歉！此读经计划中的参考经文可能不在您选择的圣经版本中。试着选择一个不同的圣经版本。如果您还是看到这条信息，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
   registration:
+    placeholder:
+      email: "输入您的电子邮件"
+      username: "输入您的用户名"
+      password: "输入您的密码"
+    with email: "用您的电子邮件注册"
     with facebook: "通过 Facebook 账户注册"
     benefits title: "获取完整的体验"
     benefits blurb: "创建一个 YouVersion 账户可以让您使用更多的功能，比如书签和笔记。这些功能在任何您登录的设备上都能使用。有个账户还可以让您更方便地和朋友分享圣经。现在就花一两分钟来注册吧。"
@@ -591,12 +600,7 @@ zh-CN:
       logos: "YouVersion 徽标包"
       icons: "圣经软件图标"
       infographic: "图表：圣经软件使用统计"
-      iphone: "图片集：iPhone"
-      ipad: "图片集：iPad"
-      android: "图片集：安卓"
-      blackberry: "图片集：黑莓"
-      win phone 7: "图片库：Windows Phone 7"
-      windows 8: "图片库：Windows 8"
+      devices: "图片集：设备"
       lifestyle: "图片集：生活方式"
       screencast: "YouVersion 屏幕截图"
     links title: "媒体报道的链接"
@@ -629,6 +633,28 @@ zh-CN:
       title: "对不起！"
       explanation: "对不起，系统出现故障，请尝试重新载入页面。"
       our action: "我们已经注意到这个问题并将尽快解决。"
+    home:
+      hero:
+        heading: "可用于手机、平板电脑或普通电脑上的免费圣经。"
+        description: "YouVersion 是一款简单易用，且无广告的圣经软件，能将神的话语带入您的日常生活。"
+        learn more: "若想了解详情，请继续往下阅读"
+        start reading: "开始阅读"
+        skip in future: "今后请自动跳过这一页"
+        now skipped: "从现在开始，本页将被自动跳过。"
+      features:
+        read heading: "阅读圣经。"
+        read description: "您可从<strong>数以百计的圣经版本和语言</strong>中任意选择，并排比较两个版本，甚至可以选择字体和显示尺寸，用你自己喜欢的方式来在线阅读圣经。"
+        study heading: "研读圣经。"
+        study description: "用您喜爱的颜色来做<strong>高亮显示</ strong>，为您喜欢的圣经经节做<strong>标签</strong>，边阅读边做笔记。当您花时间在神的话语上时，其实也在同时建立您与圣经之间的亲密关系。"
+        subscribe heading: "订阅读经计划。"
+        subscribe description: "或覆盖整本圣经，或专注于一个主题，或跟从一个有恩赐的老师来灵修。选择一份读经计划，每一天就会有一段圣经供你阅读。"
+        download heading: "随身携带圣经。"
+        download description: "免费下载<a href='http://youversion.com/download'>圣经软件到任何移动设备。当您在一个移动设备上使用圣经软件时，您的笔记、书签、高亮显示和读经计划等都将自动同步到您的其他移动设备上。"
+      get started: "从开设您的免费账户开始。"
+      word with you: "神的话与你同在。"
+      download action: "下载圣经软件"
+      download description: "下载免费的 YouVersion 圣经软件到您的移动设备上，无论走到哪里，您的圣经都将伴着您。"
+      world installs: "在全球的安装量"
   shared:
     menu_settings:
       title: "阅读器设置"
@@ -667,3 +693,5 @@ zh-CN:
     number of languages field: "语言总数："
     language and count: "%{language_name} (%{language_count})"
     public domain: "公共领域"
+    loading: "载入更多译本 ..."
+    load error: "抱歉，载入更多译本时出错。关掉这个菜单，再重新打开试试。"
